alignment bug fix 2

--- a/client/src/components/Home/HomePage.css
+++ b/client/src/components/Home/HomePage.css
@@ -178,6 +178,7 @@
 
   .content-wrapper {
     margin: 10px;
+    justify-content: center;
   }
 
   .home-title {
